--- a/style.css
+++ b/style.css
@@ -16,13 +16,23 @@
 }
 
 body{
+
     background:#fff;
 
-    font-family: "Familjen Grotesk", serif;
+
+    /* font-family: "Familjen Grotesk", serif;
     font-optical-sizing: auto;
-    font-weight: 500;
+    font-weight: 400;
+    font-style: normal; */
+
+
     font-style: normal;
+    font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizelegibility;
 }
+   
+
 
 
 
@@ -64,6 +74,8 @@ body{
     position: absolute;
     margin-top: -2%;
     cursor: pointer;
+
+   
 }
 
 .logo span{
@@ -145,7 +157,7 @@ body{
     position: absolute;
     margin-left: 72%;
     margin-top: -2%;
-    font-size: 18px;
+    font-size: 16px;
     color: #fff;
     width: 75px;
     padding: 10px;
@@ -173,12 +185,13 @@ body{
     background: #fff;
     margin-left: 77%;
     margin-top: -2%;
-    width: 80px;
-    height: 45px;
-    padding: 10px;
+    width: 85px;
+    height: 44px;
+    padding: 12px;
     border-radius: 8px;
     cursor: pointer;
     transition: 0.5s ease-in-out;
+    font-size: 15px;
 
 }
 
@@ -219,7 +232,7 @@ body{
 .content{
     width: 80vh;
     height: 70%;
-    margin-left: 23%;
+    margin-left: 23.5%;
     position: relative;
 }
 
@@ -233,19 +246,22 @@ body{
 
 
 .texts h1{
-    font-size: 55px;
+    margin-top: 3%;
+    font-size: 46px;
     color: #fff;
+    font-weight: 600;
 }
 
 .texts h4{
     margin-top: 30px;
-    font-size: 27px;
+    font-size: 24px;
     color: #fff;
+    font-weight: 500;
 }
 
 .mail-section{
     position: absolute;
-    margin-top: 45%;
+    margin-top: 46%;
 }
 
 .mail-section input{
@@ -259,7 +275,7 @@ body{
 
 .mail-section input::placeholder{
     color: #fff;
-    padding-left: 15px;
+    padding: 15px;
 }
 
 
@@ -270,7 +286,7 @@ body{
     margin-left:7%;
     width: 100px;
     height: 48px;
-    padding: 10px;
+    padding: 12px;
     border-radius: 8px;
     cursor: pointer;
     transition: 0.5s ease-in-out;
@@ -283,3 +299,177 @@ body{
 
 
 /* ==========================  */
+
+
+
+
+/* ==========================  */
+/* ====( coins section )==== */
+/* ========================== */
+
+
+.coins{
+    position: absolute;
+    width: 80%;
+    height: 22vh;
+    padding-left: 20%;
+    margin-top: -3.5%;
+}
+
+
+/* -coin-container- */
+
+.coin-container{
+    width: 100%;
+    height: 21vh;
+    display: flex;
+    flex-direction: row;
+   margin-left: 3%;
+}
+
+
+.coin{
+    display: block;
+    width: 24vh;
+    height: 15.5vh;
+    margin-left: 2.5vh;
+    background-image: linear-gradient(rgb(255, 255, 255), rgb(255, 255, 255));
+    box-shadow:  rgba(103, 113, 133, 0.2) 0.75rem 1.5rem 4rem 0rem;
+    padding: 2vh;
+    border-radius: 10px;
+
+    cursor: pointer;
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+/* coin hover */
+
+.coin:hover{
+    box-shadow: none;
+}
+
+
+/* image  sizing*/
+
+.coin img{
+    width: 40px;
+    height: 40px;
+}
+
+
+/* buy-button */
+
+.buy{
+    height: 30px;
+   padding: 5px;
+   padding-left: 8px;
+   padding-right: 8px;
+   color: rgb(83, 34, 229);
+   background-color:  rgb(239, 236, 254);
+   border-radius: 5px;
+   margin-left: 25%;
+   font-weight: 500;
+   font-size: 14px;
+   cursor: pointer;
+}
+
+/* trade button */
+
+.trade{
+    height: 30px;
+    padding: 4px;
+    padding-left: 6px;
+    padding-right: 6px;
+    background-color: rgb(230, 250, 236);
+    color: rgb(0, 153, 76);
+    border-radius: 5px;
+    margin-left: 5%;
+    font-weight: 500;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+/* name */
+
+.name{
+    font-size: 1rem;
+    width: 100%;
+}
+
+.shortname{
+    margin-left: 10%;
+    color:rgb(103, 113, 133);
+}
+
+/* price */
+
+.price{
+    font-size: 1rem;
+}
+
+/* ratings */
+
+.rating-minus{
+    font-size: 1rem;
+    margin-left: 10%;
+    color:  rgb(255, 68, 58);
+}
+
+.rating-plus{
+    font-size: 1rem;
+    margin-left: 10%;
+    color:  rgb(0, 178, 107);
+}
+
+
+
+/* more prices */
+
+.more-prices{
+    position: absolute;
+    margin-left: 4%;
+    margin-top: -2%;
+    font-size: 1rem;
+    font-weight: 400;
+    cursor: pointer;
+}
+
+.more-prices i{
+    font-size: 18px;
+}
+
+/* ==========================  */
+
+
+/* ==========================  */
+/* ====( coins section )==== */
+/* ========================== */
+
+
+.left-icon{
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    text-align: center;
+    border: 2px solid rgb(0, 89, 255);
+    border-radius: 50%;
+    left: .5%;
+    top: 94%;
+    font-size: 26px;
+    background: rgb(53, 102, 247);
+    color: #fff;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+
+.left-icon:hover{
+    box-shadow:0 0 30px  #b1adad ;
+}
+
+
+/* ==========================  */
+
