--- a/style.css
+++ b/style.css
@@ -685,6 +685,7 @@ section{
     position: absolute;
     left: 0;
     bottom: 0;
+    cursor: pointer;
 }
 
 .bottom-btn span{
@@ -695,7 +696,6 @@ section{
 }
 
 /* ======================================  */
-/* ======================================  */
 
 
 /* =======( bottom button for wallet )======= */
@@ -705,6 +705,14 @@ section{
     background-color: rgb(115, 73, 242);
     color: #fff;
 }
+
+
+
+/* ======================================  */
+/* ======================================  */
+
+
+
 
 /* ============================ */
 /* ====( exchange section )==== */
@@ -725,7 +733,7 @@ section{
     bottom: 12%;
    
     opacity: 1;
-    transition: opacity 0.5s ease-in-out;
+    transition: opacity 0.2s ease-in-out;
 }
 
 
@@ -784,4 +792,163 @@ section{
 }
 
 
-/* ==========================  */
+     /* ==========================  */
+/* ======================================  */
+
+
+
+
+/* =============================== */
+/* ====( institution section )==== */
+/* =============================== */
+
+.institution{
+    background-color: rgb(240, 242, 247);
+    background-image: image-set(url('./images/backdrops/institution.png'));
+    background-position: right center;
+}
+
+
+
+
+.cont-element-institute{
+    height: 32vh;
+    margin-left: auto;
+}
+
+
+
+.institute-icon{
+    background-color: rgb(223, 227, 235);
+    color: rgb(103, 113, 133);
+}
+
+
+.institution .institute-text{
+   margin-top: 40px;
+   position: absolute;
+}
+
+
+.bottom-btn-institute span{
+    background-color: rgb(80, 89, 107);
+    color: #fff;
+}
+
+
+   /* ================================  */
+/* ======================================  */
+
+
+
+/* =================================== */
+   /* ====( explorer section )==== */
+/* =================================== */
+
+.explorer{
+    background-color: rgba(255, 242, 229, 0.5);
+    color: rgb(242, 139, 36);
+   background-image: image-set(url('./images/backdrops/explor.png'));
+   background-position: right bottom ;
+}
+
+.explorer img{
+    position: absolute;
+    left: 55%;
+    top: 15%;  
+}
+
+.cont-element-explorer{
+    height: 70vh;
+    left: 20%;
+}
+
+.explorer-icon{
+    width: 145px;
+    background-color: rgb(255, 242, 229);
+    color: rgb(242, 139, 36);
+}
+
+.about-text-explorer{
+    background-color: rgb(255, 242, 229);
+    border: 1px solid rgb(222, 216, 253);
+}
+
+.bottom-btn-explorer span{
+    background-color: rgb(242, 139, 36);
+    color: #fff;
+}
+
+
+#EXclick1{
+    display: flex;
+}
+
+#EXclick2{
+    display: none;
+}
+
+#EXclick3{
+    display: none;
+}
+
+#EXclick4{
+    display: none;
+}
+
+   /* ================================  */
+/* ======================================  */
+
+
+
+
+/* =================================== */
+      /* ====( banner )==== */
+/* =================================== */
+
+.banner{
+    background-image: image-set(url('./images/banner-bg.svg'));
+    background-repeat: no-repeat;
+    background-position: -0.0625rem center;
+    width: 100%;
+    margin-bottom: 50px;
+    background-color: rgb(18, 29, 51);
+    color: #fff;
+   display: flex;
+   padding: 80px 0px;
+}
+
+.banner h1{
+    margin: auto;
+    margin-left: 25%;
+   font-size: 2.5rem;
+}
+.banner span{
+    margin: auto;
+    color: rgb(12, 108, 242);
+    background: rgb(255, 255, 255);
+    padding: 1rem 1.300rem;
+    font-size: 1.125rem;
+    font-weight: 500;
+    border-radius: 10px;
+    margin-left: -25%;
+}
+
+/* ================================  */
+/* ======================================  */
+
+
+
+/* =================================== */
+      /* ====( footer )==== */
+/* =================================== */
+
+.footer{
+    width: 100%;
+    height: 90vh;
+    background: #fff;
+}
+
+
+/* ================================  */
+/* ======================================  */
