--- a/style.css
+++ b/style.css
@@ -54,6 +54,11 @@ body{
     top: 0;
     left: 0;
     z-index: 13;
+    display: flex;
+    box-sizing: border-box;
+    align-items: center;
+    margin: 0px auto;
+    
 }
 
 /* ---------------------- */
@@ -85,19 +90,26 @@ body{
     color: rgb(204, 210, 222);
 }
 
+
+.logo{
+    color:  rgb(255, 255, 255);
+    margin-left: auto; 
+    display: flex;
+  
+}
+
+
 /* ------------------- */
 
 
 /* ----nav-links------ */
 
 .nav-links{
-    position: absolute;
     display: flex;
     flex-direction: row;
     color: var(--link--color);
-    margin-left: 29%;
+    margin: 0;
     list-style: none;
-    margin-top: -35px;
 }
 
 .nav-item{
@@ -110,7 +122,6 @@ body{
     transition: 0.5s ease-in-out;
 }
 
-/* animation in hover */
 
 .nav-item:hover{
     color: #fff;
@@ -132,14 +143,22 @@ body{
 
 /* ------icons------ */
 
+.icons{
+   align-items: center;
+   width: 27vh;
+   height: 100%;
+  margin-right: auto;
+  margin-left: 150px;
+  display: flex;
+  justify-content: space-between;
+}
+
+
 /* search button */
 
 .search-btn{
     font-size: 20px;
     color: #fff;
-    position: absolute;
-    margin-left: 68%;
-    margin-top: -2%;
     cursor: pointer;
 }
 
@@ -160,9 +179,7 @@ body{
 /* ---login-btn-- */
 
 .login-btn{
-    position: absolute;
-    margin-left: 72%;
-    margin-top: -2%;
+    
     font-size: 16px;
     color: #fff;
     width: 75px;
@@ -186,11 +203,8 @@ body{
 
 .signup-btn{
 
-    position:absolute;
     color: var(--nav-background);
     background: #fff;
-    margin-left: 77%;
-    margin-top: -2%;
     width: 85px;
     height: 44px;
     padding: 12px;
@@ -236,9 +250,9 @@ body{
 /* contents - container */
 
 .content{
-    width: 80vh;
+    width: 85vh;
     height: 70%;
-    margin-left: 23.5%;
+    margin-left: 25%;
     position: relative;
 }
 
@@ -271,17 +285,19 @@ body{
 }
 
 .mail-section input{
-    width: 40vh;
+    width: 41vh;
     height: 50px;
     border-radius: 10px;
     background:  rgba(255, 255, 255, 0.1);
     border: none;
     font-size: 15px;
+    outline-color: transparent;
+    color: #fff;
+    padding-left: 15px;
 }
 
 .mail-section input::placeholder{
     color: #fff;
-    padding: 15px;
 }
 
 
@@ -289,7 +305,7 @@ body{
     position:absolute;
     color: rgb(12, 108, 242);
     background: #fff;
-    margin-left:7%;
+    margin-left:4%;
     width: 100px;
     height: 48px;
     padding: 12px;
@@ -316,9 +332,9 @@ body{
 
 .coins{
     position: absolute;
-    width: 80%;
+    width: 88%;
     height: 22vh;
-    padding-left: 20%;
+    padding-left: 22%;
     margin-top: -3.5%;
 }
 
@@ -375,7 +391,7 @@ body{
    color: rgb(83, 34, 229);
    background-color:  rgb(239, 236, 254);
    border-radius: 5px;
-   margin-left: 25%;
+   margin-left: 22%;
    font-weight: 500;
    font-size: 14px;
    cursor: pointer;
@@ -503,7 +519,7 @@ body{
 section{
     position: relative;
     height: 88vh;
-    width: 135vh;
+    width: 125vh;
     margin-bottom: 3%;
     margin-left: auto;
     margin-right: auto;
@@ -520,7 +536,7 @@ section{
 
 
 .elements-container{
-    width: 75%;
+    width: 76%;
     height: 74vh;
     margin-top: auto;
     margin-bottom: auto;
@@ -812,7 +828,8 @@ section{
 
 
 .cont-element-institute{
-    height: 32vh;
+    height: 33vh;
+    width: 50vh;
     margin-left: auto;
 }
 
@@ -827,6 +844,7 @@ section{
 .institution .institute-text{
    margin-top: 40px;
    position: absolute;
+   width: 55vh;
 }
 
 
@@ -854,7 +872,7 @@ section{
 
 .explorer img{
     position: absolute;
-    left: 55%;
+    left: 50%;
     top: 15%;  
 }
 
