added some resposive code for phone

--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ body{
 
 .coins{
     position: absolute;
-    width: 88%;
+    width: 188vh;
     height: 22vh;
     padding-left: 22%;
     margin-top: -3.5%;
@@ -970,3 +970,120 @@ section{
 
 /* ================================  */
 /* ======================================  */
+
+
+
+
+
+
+
+
+
+@media (max-width:768px) {
+    
+
+    .navbar{
+        width: 100%;
+    }
+
+    .nav-links{
+       display: none;
+
+    }
+
+    .icons{
+        display: none;
+    }
+
+    .logo{
+        margin-left: 20px;
+    }
+
+    .home{
+        height: 60vh;
+    }
+
+    .content{
+        width: auto;
+        margin-left: 5%;
+    }
+
+    .texts h1{
+        font-size: 26px;
+    }
+    .texts h4{
+        font-size: 17px;
+        margin-top: 4%;
+    }
+    .texts{
+        left: 0;
+        margin-top: 25vh;
+    }
+    .mail-section{
+        margin-top: 45vh;
+       
+    }
+    .mail-section input{
+        width: 30vh;
+        height: 5vh;
+    }
+
+    .mail-section .sign-btn{
+        height: 5vh;
+        padding: 12px;
+        width: 80px;
+        font-size: 14px;
+       
+    }
+
+
+
+    /* coins and proices sliider */
+
+
+    .coins{
+        overflow: auto;
+        width: 100%;
+        height: 30vh;
+        margin-top: -10%;
+    }
+
+
+    .coin-container{
+        width: 130vh;
+        margin-left: -30%;
+        height: 30vh;
+    }
+
+    .coin{
+        width: 30vh;
+        height: 17vh;
+    }
+
+
+
+    .more-prices{
+        display: none;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    section{
+        display: none;
+    }
+    .banner{
+        display: none;
+    }
+}
+
